[package]
name = "queryz"
version = "0.1.2"
edition = "2021"
description = "A utility library for querying complex objects on the Sui blockchain. Build by SUIZ Protocol."
license = "MIT"
repository = "https://github.com/SuiZProtocol/queryz"
readme = "README.md"
authors = ["0xCryptoZen(@SUIZ Protocol)"] 

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", rev = "mainnet-v1.46.3"}
sui-types = { git = "https://github.com/mystenlabs/sui", rev = "mainnet-v1.46.3"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", rev = "mainnet-v1.46.3"}
sui-move-build = { git = "https://github.com/mystenlabs/sui", rev = "mainnet-v1.46.3"}
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.68"
serde_json = "1.0.96"
futures = "0.3.28"
bcs = "0.1.6"

[[example]]
name = "bag_query"
path = "examples/bag_query.rs"
